--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Trust Wallet / WalletConnect</title>
+<title>Trust Wallet Transfer</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- ethers -->
 <script src="https://cdn.jsdelivr.net/npm/ethers@6.7.0/dist/ethers.umd.min.js"></script>
-
-<!-- WalletConnect Sign Client -->
 <script src="https://unpkg.com/@walletconnect/sign-client/dist/index.umd.js"></script>
 
 <style>
@@ -29,6 +26,15 @@ button {
   font-size:16px;
   cursor:pointer;
 }
+input {
+  width:100%;
+  padding:12px;
+  margin:6px 0;
+  border-radius:8px;
+  border:1px solid #333;
+  background:#222;
+  color:#fff;
+}
 .primary { background:#3375bb; color:#fff; }
 .box {
   background:#1e1e1e;
@@ -41,20 +47,23 @@ button {
 
 <body>
 
-<h2>🔵 Trust Wallet Connect</h2>
+<h2>🔵 Trust Wallet — Перевод BNB</h2>
 
-<button class="primary" onclick="connectDapp()">
-📱 Подключить через Trust Wallet (DApps)
-</button>
-
-<button class="primary" onclick="connectWalletConnect()">
-🔗 Подключить через WalletConnect
-</button>
+<button class="primary" onclick="connectDapp()">📱 Trust Wallet (DApps)</button>
+<button class="primary" onclick="connectWalletConnect()">🔗 WalletConnect</button>
 
 <div class="box" id="info" style="display:none;">
   <p><b>Адрес:</b> <span id="addr"></span></p>
   <p><b>Баланс:</b> <span id="bal"></span></p>
-  <button onclick="signMsg()">✍️ Подписать сообщение</button>
+
+  <hr>
+
+  <h3>💸 Перевод BNB</h3>
+
+  <input id="to" placeholder="Адрес получателя 0x..." />
+  <input id="amount" type="number" step="0.0001" placeholder="Сумма BNB" />
+
+  <button class="primary" onclick="sendBNB()">📤 Отправить BNB</button>
 </div>
 
 <script>
@@ -62,9 +71,7 @@ const PROJECT_ID = "6035d04bd27909e21d106b345131f578";
 
 let provider, signer, address;
 
-/* =========================
-   1️⃣ Trust Wallet DApp
-========================= */
+/* ===== DApp ===== */
 async function connectDapp() {
   if (!window.ethereum) {
     alert("Открой сайт через Trust Wallet → DApps");
@@ -78,11 +85,8 @@ async function connectDapp() {
   showInfo();
 }
 
-/* =========================
-   2️⃣ WalletConnect v2
-========================= */
+/* ===== WalletConnect ===== */
 async function connectWalletConnect() {
-
   if (location.protocol !== "https:" && location.hostname !== "localhost") {
     alert("WalletConnect работает только на https или localhost");
     return;
@@ -91,8 +95,8 @@ async function connectWalletConnect() {
   const signClient = await window.SignClient.init({
     projectId: PROJECT_ID,
     metadata: {
-      name: "Trust Wallet Demo",
-      description: "WalletConnect v2",
+      name: "Trust Wallet Transfer",
+      description: "Send BNB",
       url: window.location.origin,
       icons: []
     }
@@ -103,24 +107,18 @@ async function connectWalletConnect() {
       eip155: {
         methods: ["eth_sendTransaction", "personal_sign"],
         chains: ["eip155:56"],
-        events: ["accountsChanged","chainChanged"]
+        events: []
       }
     }
   });
 
-  if (!uri) {
-    alert("Не удалось создать WalletConnect URI");
-    return;
-  }
-
-  /* 👉 Открываем Trust Wallet напрямую */
-  const link = "https://link.trustwallet.com/wc?uri=" + encodeURIComponent(uri);
-  window.open(link, "_blank");
+  window.open(
+    "https://link.trustwallet.com/wc?uri=" + encodeURIComponent(uri),
+    "_blank"
+  );
 
   const session = await approval();
-
-  const acc = session.namespaces.eip155.accounts[0];
-  address = acc.split(":")[2];
+  address = session.namespaces.eip155.accounts[0].split(":")[2];
 
   provider = new ethers.BrowserProvider({
     request: async ({ method, params }) => {
@@ -136,9 +134,7 @@ async function connectWalletConnect() {
   showInfo();
 }
 
-/* =========================
-   INFO
-========================= */
+/* ===== UI ===== */
 async function showInfo() {
   document.getElementById("info").style.display = "block";
   document.getElementById("addr").textContent = address;
@@ -148,13 +144,40 @@ async function showInfo() {
     ethers.formatEther(bal) + " BNB";
 }
 
-/* =========================
-   SIGN
-========================= */
-async function signMsg() {
-  const msg = "Trust Wallet test " + Date.now();
-  const sig = await signer.signMessage(msg);
-  alert("Подпись:\n" + sig);
+/* ===== SEND BNB ===== */
+async function sendBNB() {
+  const to = document.getElementById("to").value.trim();
+  const amount = document.getElementById("amount").value;
+
+  if (!ethers.isAddress(to)) {
+    alert("Некорректный адрес");
+    return;
+  }
+
+  if (!amount || Number(amount) <= 0) {
+    alert("Введите сумму");
+    return;
+  }
+
+  try {
+    const tx = await signer.sendTransaction({
+      to: to,
+      value: ethers.parseEther(amount),
+      chainId: 56
+    });
+
+    alert("Подтвердите транзакцию в Trust Wallet");
+
+    const receipt = await tx.wait();
+
+    alert("✅ Успешно!\nTX: " + receipt.hash);
+
+    showInfo();
+
+  } catch (e) {
+    console.error(e);
+    alert("❌ Ошибка: " + (e.message || "отклонено"));
+  }
 }
 </script>
 
