--- a/index.html
+++ b/index.html
@@ -1,150 +1,3 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-<meta charset="UTF-8">
-<title>Trust Wallet Transfer</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<script src="https://cdn.jsdelivr.net/npm/ethers@6.7.0/dist/ethers.umd.min.js"></script>
-<script src="https://unpkg.com/@walletconnect/sign-client/dist/index.umd.js"></script>
-
-<style>
-body {
-  background:#111;
-  color:#fff;
-  font-family:Arial;
-  max-width:500px;
-  margin:40px auto;
-  padding:20px;
-}
-button {
-  width:100%;
-  padding:14px;
-  margin:10px 0;
-  border-radius:10px;
-  border:none;
-  font-size:16px;
-  cursor:pointer;
-}
-input {
-  width:100%;
-  padding:12px;
-  margin:6px 0;
-  border-radius:8px;
-  border:1px solid #333;
-  background:#222;
-  color:#fff;
-}
-.primary { background:#3375bb; color:#fff; }
-.box {
-  background:#1e1e1e;
-  padding:15px;
-  border-radius:10px;
-  margin-top:20px;
-}
-</style>
-</head>
-
-<body>
-
-<h2>🔵 Trust Wallet — Перевод BNB</h2>
-
-<button class="primary" onclick="connectDapp()">📱 Trust Wallet (DApps)</button>
-<button class="primary" onclick="connectWalletConnect()">🔗 WalletConnect</button>
-
-<div class="box" id="info" style="display:none;">
-  <p><b>Адрес:</b> <span id="addr"></span></p>
-  <p><b>Баланс:</b> <span id="bal"></span></p>
-
-  <hr>
-
-  <h3>💸 Перевод BNB</h3>
-
-  <input id="to" placeholder="Адрес получателя 0x..." />
-  <input id="amount" type="number" step="0.0001" placeholder="Сумма BNB" />
-
-  <button class="primary" onclick="sendBNB()">📤 Отправить BNB</button>
-</div>
-
-<script>
-const PROJECT_ID = "6035d04bd27909e21d106b345131f578";
-
-let provider, signer, address;
-
-/* ===== DApp ===== */
-async function connectDapp() {
-  if (!window.ethereum) {
-    alert("Открой сайт через Trust Wallet → DApps");
-    return;
-  }
-
-  provider = new ethers.BrowserProvider(window.ethereum);
-  await provider.send("eth_requestAccounts", []);
-  signer = await provider.getSigner();
-  address = await signer.getAddress();
-  showInfo();
-}
-
-/* ===== WalletConnect ===== */
-async function connectWalletConnect() {
-  if (location.protocol !== "https:" && location.hostname !== "localhost") {
-    alert("WalletConnect работает только на https или localhost");
-    return;
-  }
-
-  const signClient = await window.SignClient.init({
-    projectId: PROJECT_ID,
-    metadata: {
-      name: "Trust Wallet Transfer",
-      description: "Send BNB",
-      url: window.location.origin,
-      icons: []
-    }
-  });
-
-  const { uri, approval } = await signClient.connect({
-    requiredNamespaces: {
-      eip155: {
-        methods: ["eth_sendTransaction", "personal_sign"],
-        chains: ["eip155:56"],
-        events: []
-      }
-    }
-  });
-
-  window.open(
-    "https://link.trustwallet.com/wc?uri=" + encodeURIComponent(uri),
-    "_blank"
-  );
-
-  const session = await approval();
-  address = session.namespaces.eip155.accounts[0].split(":")[2];
-
-  provider = new ethers.BrowserProvider({
-    request: async ({ method, params }) => {
-      return signClient.request({
-        topic: session.topic,
-        chainId: "eip155:56",
-        request: { method, params }
-      });
-    }
-  });
-
-  signer = await provider.getSigner();
-  showInfo();
-}
-
-/* ===== UI ===== */
-async function showInfo() {
-  document.getElementById("info").style.display = "block";
-  document.getElementById("addr").textContent = address;
-
-  const bal = await provider.getBalance(address);
-  document.getElementById("bal").textContent =
-    ethers.formatEther(bal) + " BNB";
-}
-
-/* ===== SEND BNB ===== */
 async function sendBNB() {
   const to = document.getElementById("to").value.trim();
   const amount = document.getElementById("amount").value;
@@ -160,26 +13,35 @@ async function sendBNB() {
   }
 
   try {
+    // Проверка баланса
+    const balance = await provider.getBalance(address);
+    const value = ethers.parseEther(amount);
+
+    if (balance < value) {
+      alert("Недостаточно BNB для перевода");
+      return;
+    }
+
     const tx = await signer.sendTransaction({
       to: to,
-      value: ethers.parseEther(amount),
-      chainId: 56
+      value: value,
+      gasLimit: 21000n // стандартный перевод BNB
     });
 
     alert("Подтвердите транзакцию в Trust Wallet");
 
     const receipt = await tx.wait();
-
     alert("✅ Успешно!\nTX: " + receipt.hash);
 
     showInfo();
 
   } catch (e) {
     console.error(e);
-    alert("❌ Ошибка: " + (e.message || "отклонено"));
+
+    if (e.code === 4001) {
+      alert("Транзакция отклонена пользователем");
+    } else {
+      alert("Ошибка: " + e.message);
+    }
   }
 }
-</script>
-
-</body>
-</html>
