--- a/index.html
+++ b/index.html
@@ -1,9 +1,168 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+<meta charset="UTF-8">
+<title>Trust Wallet Transfer</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<script src="https://cdn.jsdelivr.net/npm/ethers@6.7.0/dist/ethers.umd.min.js"></script>
+<script src="https://unpkg.com/@walletconnect/sign-client/dist/index.umd.js"></script>
+
+<style>
+body {
+  background:#0e0e0e;
+  color:#fff;
+  font-family:Arial, sans-serif;
+  max-width:500px;
+  margin:40px auto;
+  padding:20px;
+}
+button {
+  width:100%;
+  padding:14px;
+  margin:10px 0;
+  border-radius:10px;
+  border:none;
+  font-size:16px;
+  cursor:pointer;
+}
+input {
+  width:100%;
+  padding:12px;
+  margin:6px 0;
+  border-radius:8px;
+  border:1px solid #333;
+  background:#1a1a1a;
+  color:#fff;
+}
+.primary {
+  background:#3375bb;
+  color:#fff;
+}
+.box {
+  background:#1c1c1c;
+  padding:15px;
+  border-radius:12px;
+  margin-top:20px;
+}
+hr {
+  border:0;
+  height:1px;
+  background:#333;
+  margin:15px 0;
+}
+</style>
+</head>
+
+<body>
+
+<h2>🔵 Trust Wallet — Перевод BNB</h2>
+
+<button class="primary" onclick="connectDapp()">📱 Trust Wallet (DApps)</button>
+<button class="primary" onclick="connectWalletConnect()">🔗 WalletConnect</button>
+
+<div class="box" id="walletBox" style="display:none;">
+  <p><b>Адрес:</b><br><span id="address"></span></p>
+  <p><b>Баланс:</b> <span id="balance"></span></p>
+
+  <hr>
+
+  <h3>💸 Перевод BNB</h3>
+
+  <input id="to" placeholder="Адрес получателя 0x..." />
+  <input id="amount" type="number" step="0.0001" placeholder="Сумма BNB" />
+
+  <button class="primary" onclick="sendBNB()">📤 Отправить</button>
+</div>
+
+<script>
+const PROJECT_ID = "6035d04bd27909e21d106b345131f578";
+
+let provider;
+let signer;
+let userAddress;
+
+/* ===== Trust Wallet DApps ===== */
+async function connectDapp() {
+  if (!window.ethereum) {
+    alert("Открой сайт через Trust Wallet → DApps");
+    return;
+  }
+
+  provider = new ethers.BrowserProvider(window.ethereum);
+  await provider.send("eth_requestAccounts", []);
+  signer = await provider.getSigner();
+  userAddress = await signer.getAddress();
+
+  await showWallet();
+}
+
+/* ===== WalletConnect ===== */
+async function connectWalletConnect() {
+  if (location.protocol !== "https:" && location.hostname !== "localhost") {
+    alert("WalletConnect работает только на https или localhost");
+    return;
+  }
+
+  const signClient = await window.SignClient.init({
+    projectId: PROJECT_ID,
+    metadata: {
+      name: "Trust Wallet Transfer",
+      description: "Send BNB",
+      url: window.location.origin,
+      icons: []
+    }
+  });
+
+  const { uri, approval } = await signClient.connect({
+    requiredNamespaces: {
+      eip155: {
+        methods: ["eth_sendTransaction", "personal_sign"],
+        chains: ["eip155:56"],
+        events: []
+      }
+    }
+  });
+
+  window.open(
+    "https://link.trustwallet.com/wc?uri=" + encodeURIComponent(uri),
+    "_blank"
+  );
+
+  const session = await approval();
+  userAddress = session.namespaces.eip155.accounts[0].split(":")[2];
+
+  provider = new ethers.BrowserProvider({
+    request: async ({ method, params }) => {
+      return signClient.request({
+        topic: session.topic,
+        chainId: "eip155:56",
+        request: { method, params }
+      });
+    }
+  });
+
+  signer = await provider.getSigner();
+  await showWallet();
+}
+
+/* ===== UI ===== */
+async function showWallet() {
+  document.getElementById("walletBox").style.display = "block";
+  document.getElementById("address").textContent = userAddress;
+
+  const bal = await provider.getBalance(userAddress);
+  document.getElementById("balance").textContent =
+    ethers.formatEther(bal) + " BNB";
+}
+
+/* ===== SEND BNB ===== */
 async function sendBNB() {
   const to = document.getElementById("to").value.trim();
   const amount = document.getElementById("amount").value;
 
   if (!ethers.isAddress(to)) {
-    alert("Некорректный адрес");
+    alert("Некорректный адрес получателя");
     return;
   }
 
@@ -13,19 +172,18 @@ async function sendBNB() {
   }
 
   try {
-    // Проверка баланса
-    const balance = await provider.getBalance(address);
     const value = ethers.parseEther(amount);
+    const balance = await provider.getBalance(userAddress);
 
     if (balance < value) {
-      alert("Недостаточно BNB для перевода");
+      alert("Недостаточно BNB");
       return;
     }
 
     const tx = await signer.sendTransaction({
       to: to,
       value: value,
-      gasLimit: 21000n // стандартный перевод BNB
+      gasLimit: 21000n
     });
 
     alert("Подтвердите транзакцию в Trust Wallet");
@@ -33,7 +191,7 @@ async function sendBNB() {
     const receipt = await tx.wait();
     alert("✅ Успешно!\nTX: " + receipt.hash);
 
-    showInfo();
+    await showWallet();
 
   } catch (e) {
     console.error(e);
@@ -41,7 +199,11 @@ async function sendBNB() {
     if (e.code === 4001) {
       alert("Транзакция отклонена пользователем");
     } else {
-      alert("Ошибка: " + e.message);
+      alert("Ошибка: " + (e.message || "неизвестная ошибка"));
     }
   }
 }
+</script>
+
+</body>
+</html>
